# seni

./: .clang-format  .eslintrc  .eslintrc.json  .gitignore  .jscsrc  .jshintrc  LICENSE  Makefile  README.md  README.txt  api.org  bower.json  build.bat  build_osx.sh  build_wasm.bat  build_wasm.sh  build_win.bat  cjsindex.html  elements.html  gallery.json  gulpfile.js  index.cjs.html  index.html  isg-notes.org  karma.conf.js  make_unix.sh  make_win.bat  notes.org  package-lock.json  package.json  readme.txt  selector.html  server.js  temp.seni  test-main.js  test.webpack.config.js  todo.org  webpack.common.js  webpack.config.js  webpack.config.min.js  (+2 more)
cli/: Cargo.toml  README.md  Settings.toml  pp.seni  prng-bug.seni
cli/benches/: seni_benchmark.rs
cli/src/: main.rs
client/: .gitignore  Cargo.toml  build.bat  build.sh  css-build.bat  css-build.sh  package-lock.json  package.json  sed-hack.sh
client/scss/: Cargo.toml
client/scss/scss/: _bones.scss  _stylesheet.scss  _variables.scss  seni.scss
client/sen-client/: Cargo.toml  build.bat  build.sh
client/sen-client/src/: lib.rs
client/sen-client/www/: .gitignore  index.js  worker.js
client/src/: lib.rs  wasm.c
client/ts/: build.bat  build.sh  tsconfig-main.json  tsconfig-sketch.json
client/ts/src/: History.ts  Log.ts  Renderer.ts  SeniMode.ts  history.js  index.js  job.js  misc.js  renderer.js  sketch.js  stuff.js  utils.js
client/www/: .gitignore  index.html  index.js  package-lock.json  package.json  piece.html  piece.js  sketch.html  sketch.js  webpack.common.js  webpack.dev.js  webpack.devpiece.js  webpack.piece.js  webpack.prod.js  worker.js
client/www/assets/: index.html
client/www/css/: bones.css  indyio.css  stylesheet.css
client/www/src/: app-piece.js  job.js  store.js  worker.js
gui/: Cargo.toml  Config.toml.example  README.md
gui/assets/shaders/: blit.frag  blit.vert  imgui.frag  imgui.vert  piece.frag  piece.vert  sketch.frag  triangle.frag  triangle.vert
gui/lib/gl/: Cargo.toml  build.rs
gui/src/: error.rs  gl_util.rs  input_imgui.rs  main.rs  matrix_util.rs  render_gl.rs  render_imgui.rs  render_piece.rs  render_seni.rs  render_sketch.rs  render_square.rs  resources.rs  seni.rs
server/: .env  .env-example  Cargo.toml  README.md  Rocket.toml  build.bat  build.sh  gallery.json  run.sh  seniserver.go  serve.go  server.js
server/db/: README.md  schema.psql
server/db/seni/: 14eg-marker-grid.seni  14fh-rothko-1.seni  151c-flower.seni  1531-four-squares.seni  154c-stroked-bezier.seni  154h-rothko-2.seni  155j-chaotic-grid-2.seni  155j-chaotic-grid-3.seni  1560-path.seni  156h-tri-grid.seni  157e-tile-shadow.seni  15fe-rotate-mirror.seni  15h3-polychrome.seni  15h3-rotate-mirror-2.seni  15h4-chromatic-layers-1.seni  15h4-chromatic-layers-2.seni  15h4-mirror-layers.seni  15h4-rotate-mirror.seni  15he-mirror-layers.seni  15he-rotate-mirror.seni  160c-schotter.seni  161j-trump.seni  1626-orchid.seni  162e-mask.seni  162e-x.seni  1632-star.seni  1634-cryst.seni  163a-scale-green.seni  1642-stacks.seni  1643-paren.seni  1643-rose.seni  1648-chalk-boxes.seni  1743-dragon.seni  1743-segs.seni  1743-shell.seni  1840-boxes.seni  1841-nib.seni  1918-dev-bitmap.seni  1918-einstein.seni  1922-skull-face.seni  (+2 more)
server/scripts/: isg-seni-app.service  isg-start-seni-app.sh
server/sen/: 156h-tri-grid.sen  157e-tile-shadow.sen  15fe-rotate-mirror.sen  15h4-mirror-layers.sen  15h4-rotate-mirror.sen  15he-mirror-layers.sen  15he-rotate-mirror.sen  162e-mask.sen  1633-orchid.sen  1633-petal.sen  1642-book-stack.sen  1643-hyp.sen  1643-thorn.sen  1743-grose.sen  1743-segs.sen  1743-shell.sen  1748-orchid-b.sen  1838-orchid-b.sen  1838-shell.sen
server/sen/local/: 1839-ease-test.sen  1840-curves-to-curves.sen  bug01.sen  vmtest.sen
server/sen/sketch/: 154a.sen  155b-spiral-derived.sen  155j-chaotic-grid-3.sen  1565-hex-grid.sen  15h3-rotate-mirror-2.sen  15h3-tri-grid.sen  15h4-mirror-layers.sen  15he-cos-2.sen  15he-mirror-layers.sen  (+11 more)
server/seni/: 14ef-blur-grid.seni  14eg-marker-grid.seni  14eh-chaotic-grid.seni  14fh-rothko-1.seni  151c-flower.seni  1531-four-squares.seni  154c-stroked-bezier.seni  154h-rothko-2.seni  1556-biomorphs.seni  155b-spiral-derived.seni  155j-chaotic-grid-2.seni  155j-chaotic-grid-3.seni  1560-path.seni  1565-hex-grid.seni  156h-tri-grid.seni  157e-tile-shadow.seni  1580-quilt.seni  15fe-rotate-mirror.seni  15h3-polychrome.seni  15h3-rotate-mirror-2.seni  15h3-tri-grid.seni  15h4-chromatic-layers-1.seni  15h4-chromatic-layers-2.seni  15h4-chromatic-layers-3.seni  15h4-mirror-layers.seni  15h4-rotate-mirror.seni  15he-cos-1.seni  15he-cos-2.seni  15he-cos-3.seni  15he-mirror-layers.seni  15he-rotate-mirror.seni  160c-schotter.seni  161g-grid-flow.seni  161j-trump.seni  1626-embers.seni  1626-orchid.seni  162e-alien.seni  162e-mask.seni  162e-slice.seni  162e-star.seni  (+29 more)
server/senie/: 1560-path.senie  15h4-rotate-mirror.senie  1638-night.senie  1743-dragon.senie  1743-grose.senie
server/src/: 404.html  api.rs  auth_cookie.rs  auth_session.rs  error.rs  handle_authentication.rs  handle_entries.rs  handle_gallery.rs  handle_registration.rs  handle_users.rs  handlers.rs  lib.rs  main.rs  models.rs  pg.rs  server.rs  session.rs  staticfile.rs
server/static/: db.json  gallery.json
(+1531 files in other folders)
