[package]
name = "cli"
version = "4.1.0"
authors = ["Inderjit Gill <email@indy.io>"]
edition = "2018"
license = "GPL-3.0+"

[dependencies]
core = { path = "../core" }
clap = "2.32.0"
log = "0.4"
env_logger = "0.6"

[dev-dependencies]
criterion = "0.2"

# temporary config for performance profiling
[profile.release]
debug = true
lto = false

[[bench]]
name = "seni_benchmark"
harness = false
