[package]
name = "seni-cli"
version = "4.1.0"
authors = ["Inderjit Gill <email@indy.io>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
clap = "2.32.0"
config = "0.9"
core = { path = "../core" }
env_logger = "0.6"
image = "0.21.1"
log = "0.4"

[dev-dependencies]
criterion = "0.2"

# temporary config for performance profiling
[profile.release]
debug = true
lto = false

[[bench]]
name = "seni_benchmark"
harness = false
