[package]
name = "seni-gui"
version = "4.1.0"
authors = ["Inderjit Gill <email@indy.io>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
clap = "2.32.0"
config = "0.9"
core = { path = "../core" }
env_logger = "0.6"
gl = { path = "lib/gl" }
image = "0.21.1"
imgui = "0.0.22"
log = "0.4"
sdl2 = "0.32.1"
notify = "4.0.12"

[features]
gl_debug = ["gl/debug"]
