[package]
name = "server"
version = "0.1.0"
authors = ["Inderjit Gill <email@indy.io>"]
edition = "2018"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.6"
dotenv = "0.14.1"

# webserver
actix-rt = "0.2.2"
actix-web = "1.0.0"
actix-files = "0.1.1"

# json
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
