[package]
name = "seni-server"
version = "0.1.0"
authors = ["Inderjit Gill <email@indy.io>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-session = "0.3.0"
actix-web = "2.0.0"
deadpool-postgres = {version = "0.5", default-features = false}
derive_more = "0.99.2"
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }

# tokio-pg-mapper = { path = "../tokio-postgres-mapper"}
# tokio-pg-mapper-derive = { path = "../tokio-postgres-mapper/pg_mapper_derive"}
tokio-pg-mapper = "0.1.5"
tokio-pg-mapper-derive = "0.1.5"

tokio-postgres = "0.5.1"
# tracing
tracing = "0.1"
tracing-subscriber = "0.2.1"
# for salt + password hashing
rand = "0.7.2"
rust-argon2 = "0.6.1"
